python-tcp-server-idle-timeout-dr.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: python-server-idle-timeout-dr
  namespace: tcp
spec:
  host: python-tcp-server.tcp.svc.cluster.local
  trafficPolicy:
    connectionPool:
      tcp:
        idleTimeout: 90s
