tcp-server-idle-keepalive-dr.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: tcp-idle-timeout-keepalive-dr
  namespace: tcp
spec:
  host: tcp-server.tcp.svc.cluster.local
  trafficPolicy:
    connectionPool:
      tcp:
        idleTimeout: 30s
        tcpKeepalive:
          time: 20s
          interval: 15s
