tcp-server-idle-timeout-dr.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: tcp-idle-timeout-dr
  namespace: tcp
spec:
  host: tcp-server.tcp.svc.cluster.local
  trafficPolicy:
    connectionPool:
      tcp:
        idleTimeout: 30s
