tcp-server-keepalive-dr.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: tcp-idle-keepalive-dr
  namespace: tcp
spec:
  host: tcp-server.tcp.svc.cluster.local
  trafficPolicy:
    connectionPool:
      tcp:
        tcpKeepalive:
          time: 10s
          interval: 5s
